--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,28 +35,31 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        go-version: [1.16.x]
         include:
-          - os: macos-latest
-            TARGET: macos
-            CMD_BUILD: pyinstaller -F -w -n clipster -i resources/clipster.icns cli.py && cd dist/ && zip -r9 clipster clipster.app/
-            OUT_FILE_NAME: clipster.zip
-            ASSET_MIME: application/zip
-          - os: windows-latest
-            TARGET: windows
-            CMD_BUILD: pyinstaller -F -w -n clipster -i resources/clipster.ico cli.py
-            OUT_FILE_NAME: clipster.exe
-            ASSET_MIME: application/vnd.microsoft.portable-executable
+          - os: ubuntu-latest
+            TARGET: linux
+            CMD_BUILD: go mod tidy && go build -o build/clipster
+            OUT_FILE_NAME: clipster
+            ASSET_MIME: application/octet-stream
+          # - os: macos-latest
+          #   TARGET: macos
+          #   CMD_BUILD: pyinstaller -F -w -n clipster -i resources/clipster.icns cli.py && cd dist/ && zip -r9 clipster clipster.app/
+          #   OUT_FILE_NAME: clipster.zip
+          #   ASSET_MIME: application/zip
+          # - os: windows-latest
+          #   TARGET: windows
+          #   CMD_BUILD: pyinstaller -F -w -n clipster -i resources/clipster.ico cli.py
+          #   OUT_FILE_NAME: clipster.exe
+          #   ASSET_MIME: application/vnd.microsoft.portable-executable
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
+    - name: Install Go
+      uses: actions/setup-go@v2
       with:
-        python-version: 3.8
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Build with pyinstaller for ${{matrix.TARGET}}
+        go-version: ${{ matrix.go-version }}
+    - name: Checkout repo
+      uses: actions/checkout@v2
+    - name: Build Go for ${{matrix.TARGET}}
       run: ${{matrix.CMD_BUILD}}
     - name: Load Release URL File from release job
       uses: actions/download-artifact@v1
@@ -75,6 +78,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.get_release_info.outputs.upload_url }}
-        asset_path: ./dist/${{ matrix.OUT_FILE_NAME}}
+        asset_path: ./build/${{ matrix.OUT_FILE_NAME}}
         asset_name: ${{ matrix.OUT_FILE_NAME}}
         asset_content_type: ${{ matrix.ASSET_MIME}}
