enable actions build for windows

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,11 +48,11 @@ jobs:
           #   CMD_BUILD: pyinstaller -F -w -n clipster -i resources/clipster.icns cli.py && cd dist/ && zip -r9 clipster clipster.app/
           #   OUT_FILE_NAME: clipster.zip
           #   ASSET_MIME: application/zip
-          # - os: windows-latest
-          #   TARGET: windows
-          #   CMD_BUILD: pyinstaller -F -w -n clipster -i resources/clipster.ico cli.py
-          #   OUT_FILE_NAME: clipster.exe
-          #   ASSET_MIME: application/vnd.microsoft.portable-executable
+          - os: windows-latest
+            TARGET: windows
+            CMD_BUILD: go mod tidy && go build -o build/clipster
+            OUT_FILE_NAME: clipster.exe
+            ASSET_MIME: application/vnd.microsoft.portable-executable
     steps:
     - name: Install Go
       uses: actions/setup-go@v2
