--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,6 +36,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.16.x]
+        os: [ubuntu-latest, windows-latest]
         include:
           - os: ubuntu-latest
             TARGET: linux
