--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,17 +38,17 @@ jobs:
         go-version: [1.16.x]
         os: [ubuntu-latest, windows-latest]
         include:
+          # - os: macos-latest
+          #   TARGET: macos
+          #   CMD_BUILD: go mod tidy && go build -o build/clipster
+          #   OUT_FILE_NAME: clipster.zip
+          #   ASSET_MIME: application/zip
           - os: ubuntu-latest
             TARGET: linux
             CMD_RESOLVE_DEPS: sudo apt-get update && sudo apt-get -y install libgtk-3-dev
             CMD_BUILD: go mod tidy && go build -o build/clipster
             OUT_FILE_NAME: clipster
             ASSET_MIME: application/octet-stream
-          # - os: macos-latest
-          #   TARGET: macos
-          #   CMD_BUILD: pyinstaller -F -w -n clipster -i resources/clipster.icns cli.py && cd dist/ && zip -r9 clipster clipster.app/
-          #   OUT_FILE_NAME: clipster.zip
-          #   ASSET_MIME: application/zip
           - os: windows-latest
             TARGET: windows
             CMD_BUILD: go mod tidy && go build -o build/clipster.exe
