if for macos as well

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,8 +63,8 @@ jobs:
     - name: Checkout repo
       uses: actions/checkout@v2
     - name: Resolve dependencies for ${{matrix.TARGET}}
+      if: runner.os == 'Linux' || runner.os == 'macOS'
       run: ${{matrix.CMD_RESOLVE_DEPS}}
-      if: runner.os == 'Linux'
     - name: Build Go for ${{matrix.TARGET}}
       run: ${{matrix.CMD_BUILD}}
     - name: Load Release URL File from release job
