--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,13 +36,13 @@ jobs:
     strategy:
       matrix:
         go-version: [1.16.x]
-        os: [macos-latest] #, ubuntu-latest, windows-latest]
+        os: [macos-10.15] #, ubuntu-latest, windows-latest]
         include:
-          - os: macos-latest
+          - os: macos-10.15
             TARGET: macos
             CMD_RESOLVE_DEPS: brew install gtk+3
-            CMD_BUILD: go mod tidy && go build --tags gtk -o build/clipster.app/Contents/MacOS/clipster-bin && cd build/ && zip -r9 clipster clipster.app/
-            OUT_FILE_NAME: clipster.zip
+            CMD_BUILD: go mod tidy && go build --tags gtk -o build/clipster_mac.app/Contents/MacOS/clipster_mac-bin && cd build/ && zip -r9 clipster_mac clipster_mac.app/
+            OUT_FILE_NAME: clipster_mac.zip
             ASSET_MIME: application/zip
           # - os: ubuntu-latest
           #   TARGET: linux
