--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,9 @@
 # Binaries for programs and plugins
+*.swp
 *.dylib
 !build/clipster_mac.app/*
 !build/clipster_mac.app/Contents/Resources/lib/*.dylib
+!build/bundle/gtk3-launcher.sh
 .DS_Store
 *.exe
 *.exe~
