--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,7 +56,8 @@ jobs:
             ASSET_MIME: application/zip  # application/octet-stream
           - os: windows-latest
             TARGET: windows
-            CMD_BUILD: go mod tidy && go build -o build/clipster_win.exe && cd build && powershell Compress-Archive clipster_win.exe clipster_win.zip
+            CMD_PRE_BUILD: go get github.com/akavel/rsrc && rsrc -ico assets/clipster_icon_64.ico
+            CMD_BUILD: go mod tidy && go build -ldflags -H=windowsgui -o build/clipster_win.exe && cd build && powershell Compress-Archive clipster_win.exe clipster_win.zip
             OUT_FILE_NAME: clipster_win.zip
             ASSET_MIME: application/zip  # application/vnd.microsoft.portable-executable
     steps:
@@ -75,6 +76,9 @@ jobs:
         go-version: ${{ matrix.go-version }}
     - name: Checkout repo
       uses: actions/checkout@v2
+    - name: Pre build for ${{matrix.TARGET}}
+      run: ${{matrix.CMD_PRE_BUILD}}
+      if: runner.os == 'Windows'
     - name: Build Go for ${{matrix.TARGET}}
       run: ${{matrix.CMD_BUILD}}
     - name: Post build for ${{matrix.TARGET}}
