--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,9 +1,9 @@
-name: Build
+name: Test-Build-Windows
 
 on:
   push:
     tags:
-      - 'v*' # Push events to matching v*, i.e. v1.0, v20.15.10
+      - 'test*' # Push events to matching v*, i.e. v1.0, v20.15.10
 
 jobs:
 
@@ -35,28 +35,15 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        go-version: [1.16.x]
-        os: [macos-10.15, ubuntu-latest, windows-latest]
+        go-version: [1.17.x]
+        os: [windows-latest]
         include:
-          - os: macos-10.15
-            TARGET: macos
-            CMD_RESOLVE_DEPS: conda install -y -q -c conda-forge gtk3 glib
-            CMD_BUILD: export PKG_CONFIG_PATH="$CONDA/lib/pkgconfig" && go mod tidy && go build -o build/clipster_mac -ldflags "-s -w" .
-            OUT_FILE_NAME: clipster_mac.zip
-            ASSET_MIME: application/zip
-            CMD_POST_BUILD: |
-              git clone https://github.com/mc51/gtk-mac-bundler && cd gtk-mac-bundler && make install
-              cd ../ && export PKG_CONFIG_PATH="$CONDA/lib/pkgconfig" && ~/.local/bin/gtk-mac-bundler ./build/bundle/clipster.bundle
-              ls -lah && cd build && zip -r9 clipster_mac clipster_mac.app/
-          - os: ubuntu-latest
-            TARGET: linux
-            CMD_RESOLVE_DEPS: sudo apt-get update && sudo apt-get -y install libgtk-3-dev
-            CMD_BUILD: go mod tidy && go build -o build/clipster_linux -ldflags "-s -w" . && cd build && zip -r9 clipster_linux clipster_linux
-            OUT_FILE_NAME: clipster_linux.zip
-            ASSET_MIME: application/zip  # application/octet-stream
           - os: windows-latest
             TARGET: windows
-            CMD_PRE_BUILD: go get github.com/akavel/rsrc && rsrc -ico assets/clipster_icon_64.ico
+            CMD_PRE_BUILD: |
+              go get github.com/akavel/rsrc && rsrc -ico assets/clipster_icon_64.ico
+              pacman -S mingw-w64-x86_64-gtk3 mingw-w64-x86_64-toolchain base-devel glib2-devel
+              sed -i -e 's/-Wl,-luuid/-luuid/g' /mingw64/lib/pkgconfig/gdk-3.0.pc
             CMD_BUILD: go mod tidy && go build -o build/clipster_win.exe -ldflags "-H=windowsgui -s -w" . && cd build && powershell Compress-Archive clipster_win.exe clipster_win.zip
             OUT_FILE_NAME: clipster_win.zip
             ASSET_MIME: application/zip  # application/vnd.microsoft.portable-executable
@@ -79,28 +66,9 @@ jobs:
     - name: Pre build for ${{matrix.TARGET}}
       run: ${{matrix.CMD_PRE_BUILD}}
       if: runner.os == 'Windows'
+      shell: C:\msys64\usr\bin\bash.exe {0}
     - name: Build Go for ${{matrix.TARGET}}
       run: ${{matrix.CMD_BUILD}}
     - name: Post build for ${{matrix.TARGET}}
       run: ${{matrix.CMD_POST_BUILD}}
       if: runner.os == 'macOS'
-    - name: Load Release URL File from release job
-      uses: actions/download-artifact@v1
-      with:
-        name: release_url
-    - name: Get Release File Name & Upload URL
-      id: get_release_info
-      shell: bash
-      run: |
-        value=`cat release_url/release_url.txt`
-        echo ::set-output name=upload_url::$value
-    - name: Upload Release Asset
-      id: upload-release-asset
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.get_release_info.outputs.upload_url }}
-        asset_path: ./build/${{ matrix.OUT_FILE_NAME}}
-        asset_name: ${{ matrix.OUT_FILE_NAME}}
-        asset_content_type: ${{ matrix.ASSET_MIME}}
