--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,6 @@ jobs:
           - os: windows-latest
             TARGET: windows
             CMD_PRE_BUILD: |
-              echo 'export PATH=/c/msys64/usr/bin:$PATH' >> ~/.bashrc
-              source ~/.bashrc
               pacman -S mingw-w64-x86_64-gtk3 mingw-w64-x86_64-toolchain base-devel glib2-devel
               sed -i -e 's/-Wl,-luuid/-luuid/g' /mingw64/lib/pkgconfig/gdk-3.0.pc
             CMD_BUILD: go mod tidy && go build -o build/clipster_win.exe -ldflags "-H=windowsgui -s -w" . && cd build && powershell Compress-Archive clipster_win.exe clipster_win.zip
@@ -41,6 +39,10 @@ jobs:
         go-version: ${{ matrix.go-version }}
     - name: Checkout repo
       uses: actions/checkout@v2
+    - name: switch git-bash shell to msys2 shell by adding msys2 path to PATH front
+      run: echo "C:\msys64\usr\bin" >> $GITHUB_PATH
+      shell: bash
+      if: runner.os == 'Windows'
     - name: Pre build for ${{matrix.TARGET}}
       run: ${{matrix.CMD_PRE_BUILD}}
       if: runner.os == 'Windows'
