--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,9 +22,12 @@ jobs:
               sed -i -e 's/-Wl,-luuid/-luuid/g' /mingw64/lib/pkgconfig/gdk-3.0.pc
               env
               pkg-config --libs gio-2.0
-            CMD_BUILD: go mod tidy -compat="1.17" && go build -x -v -o build/clipster_win.exe -ldflags "-H=windowsgui -s -w" . && cd build && powershell Compress-Archive clipster_win.exe clipster_win.zip
+            CMD_BUILD: |
+              go mod tidy -compat="1.17"
+              go build -x -v -o build/clipster_win.exe -ldflags "-H=windowsgui -s -w" .
+              cd build && powershell Compress-Archive clipster_win.exe clipster_win.zip
             OUT_FILE_NAME: clipster_win.zip
-            ASSET_MIME: application/zip  # application/vnd.microsoft.portable-executable
+            ASSET_MIME: application/zip
     steps:
     - uses: s-weigand/setup-conda@v1
       with:
@@ -44,7 +47,7 @@ jobs:
     - name: switch git-bash shell to msys2 shell by adding msys2 path to PATH front
       run: |
         echo "C:\msys64\usr\bin" >> $GITHUB_PATH
-        echo "/mingw64/bin" >> $PKG_CONFIG_PATH
+        export PKG_CONFIG_PATH=/mingw64/bin:$PKG_CONFIG_PATH
         pkg-config --libs gio-2.0
       shell: bash
       if: runner.os == 'Windows'
