--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,12 +18,15 @@ jobs:
           - os: windows-latest
             TARGET: windows
             CMD_PRE_BUILD: |
+              tree /mingw64
               export PATH=/mingw64/bin:$PATH
-              export PKG_CONFIG_PATH=/mingw64/lib/pkgconfig:$PKG_CONFIG_PATH
+              export PKG_CONFIG_PATH=/mingw64/lib/pkgconfig
               pacman -S --needed --noconfirm mingw-w64-x86_64-gtk3 mingw-w64-x86_64-toolchain base-devel glib2-devel
               sed -i -e 's/-Wl,-luuid/-luuid/g' /mingw64/lib/pkgconfig/gdk-3.0.pc
+              which pkg-config
               pkg-config --cflags gio-2.0
             CMD_BUILD: |
+              export CGO_CFLAGS="-I/mingw64/include/glib-2.0"
               go mod tidy -compat="1.17"
               go build -x -v -o build/clipster_win.exe -ldflags "-H=windowsgui -s -w" .
               cd build && powershell Compress-Archive clipster_win.exe clipster_win.zip
