--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
               which pkg-config
               pkg-config --cflags gio-2.0
             CMD_BUILD: |
-              export CGO_CFLAGS="-I/mingw64/include/glib-2.0"
+              # export CGO_CFLAGS="-I/mingw64/include/glib-2.0"
               go mod tidy -compat="1.17"
               go build -x -v -o build/clipster_win.exe -ldflags "-H=windowsgui -s -w" .
               cd build && powershell Compress-Archive clipster_win.exe clipster_win.zip
