--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,16 +18,14 @@ jobs:
           - os: windows-latest
             TARGET: windows
             CMD_PRE_BUILD: |
-              export PATH='C:/msys64/mingw64/bin':$PATH
-              export PKG_CONFIG_PATH='C:/msys64/mingw64/lib/pkgconfig'
+              # export PATH=/mingw64/bin:$PATH
+              # export PKG_CONFIG_PATH=/mingw64/lib/pkgconfig
               pacman -S --needed --noconfirm mingw-w64-x86_64-gtk3 mingw-w64-x86_64-toolchain base-devel glib2-devel
               sed -i -e 's/-Wl,-luuid/-luuid/g' /mingw64/lib/pkgconfig/gdk-3.0.pc
-              ls -lah /mingw64/include
-              ls -lah 'C:/msys64/mingw64/lib/'
               which pkg-config
-              pkg-config --cflags gio-2.0
+              pkg-config --cflags --libs gio-2.0
             CMD_BUILD: |
-              # export CGO_CFLAGS="-I/mingw64/include/glib-2.0"
+              pkg-config --cflags --libs gio-2.0
               go mod tidy -compat="1.17"
               go build -x -v -o build/clipster_win.exe -ldflags "-H=windowsgui -s -w" .
               cd build && powershell Compress-Archive clipster_win.exe clipster_win.zip
@@ -49,15 +47,20 @@ jobs:
         go-version: ${{ matrix.go-version }}
     - name: Checkout repo
       uses: actions/checkout@v2
-    - name: switch git-bash shell to msys2 shell by adding msys2 path to PATH front
-      run: |
-        echo "C:\msys64\usr\bin" >> $GITHUB_PATH
-      shell: bash
+    - name: Install and use MINGW64
+      uses: msys2/setup-msys2@v2
+      with:
+        msystem: MINGW64
       if: runner.os == 'Windows'
+    # - name: switch git-bash shell to msys2 shell by adding msys2 path to PATH front
+    #   run: |
+    #     echo "C:\msys64\usr\bin" >> $GITHUB_PATH
+    #   shell: bash
+    #   if: runner.os == 'Windows'
     - name: Pre build for ${{matrix.TARGET}}
       run: ${{matrix.CMD_PRE_BUILD}}
       if: runner.os == 'Windows'
-      shell: bash
+      shell: msys2 {0}
     - name: Build Go for ${{matrix.TARGET}}
       run: ${{matrix.CMD_BUILD}}
-      shell: bash
+      shell: msys2 {0}
