--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -20,7 +20,6 @@ jobs:
             CMD_PRE_BUILD: |
               # export PATH=/mingw64/bin:$PATH
               # export PKG_CONFIG_PATH=/mingw64/lib/pkgconfig
-              pacman -S --needed --noconfirm mingw-w64-x86_64-gtk3 mingw-w64-x86_64-toolchain base-devel glib2-devel
               sed -i -e 's/-Wl,-luuid/-luuid/g' /mingw64/lib/pkgconfig/gdk-3.0.pc
               which pkg-config
               pkg-config --cflags --libs gio-2.0
@@ -51,6 +50,12 @@ jobs:
       uses: msys2/setup-msys2@v2
       with:
         msystem: MINGW64
+        path-type: inherit
+      install: >-
+        mingw-w64-x86_64-gtk3
+        mingw-w64-x86_64-toolchain
+        base-devel
+        glib2-devel
       if: runner.os == 'Windows'
     # - name: switch git-bash shell to msys2 shell by adding msys2 path to PATH front
     #   run: |
