--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.17.x]
-        os: [macos-10.15, ubuntu-latest, windows-latest]
+        os: [macos-10.15, ubuntu-latest, windows-2019]
         include:
           - os: macos-10.15
             TARGET: macos
@@ -57,7 +57,9 @@ jobs:
           - os: ubuntu-latest
             TARGET: linux
             SHELL: bash
-            CMD_RESOLVE_DEPS: sudo apt-get update && sudo apt-get -y install libgtk-3-dev
+            CMD_RESOLVE_DEPS: |
+              sudo apt-get update
+              sudo apt-get -y install libgtk-3-dev libappindicator3-dev
             CMD_BUILD: |
               go mod tidy -compat="1.17"
               go build -o build/clipster_linux -ldflags "-s -w" .
@@ -103,6 +105,7 @@ jobs:
       if: runner.os == 'Windows'
     - name: Build Go for ${{matrix.TARGET}}
       run: ${{matrix.CMD_BUILD}}
+      shell: ${{matrix.SHELL}}
     - name: Post build for ${{matrix.TARGET}}
       run: ${{matrix.CMD_POST_BUILD}}
       if: runner.os == 'macOS'
