--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -66,7 +66,7 @@ jobs:
               cd build && zip -r9 clipster_linux clipster_linux
             OUT_FILE_NAME: clipster_linux.zip
             ASSET_MIME: application/zip  # application/octet-stream
-          - os: windows-latest
+          - os: windows-2019
             TARGET: windows
             SHELL: msys2 {0}
             CMD_BUILD: |
