--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -72,7 +72,7 @@ jobs:
             CMD_BUILD: |
               sed -i -e 's/-Wl,-luuid/-luuid/g' /mingw64/lib/pkgconfig/gdk-3.0.pc  # fix bug
               go mod tidy -compat="1.17"
-              go build -o build/clipster_win.exe -ldflags "-extldflags=-static -H=windowsgui -s -w" .
+              go build -v -x -o build/clipster_win.exe -ldflags "-H=windowsgui -s -w" .
               cd build && powershell Compress-Archive clipster_win.exe clipster_win.zip
             OUT_FILE_NAME: clipster_win.zip
             ASSET_MIME: application/zip  # application/vnd.microsoft.portable-executable
