build fix windows - add gtk3 files to zip

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -78,7 +78,7 @@ jobs:
               cp -a /mingw64/share/icons/ build/share/
               cp -a /mingw64/share/glib-2.0/schemas/  build/share/glib-2.0/
               cp -a /mingw64/lib/gdk-pixbuf-2.0/ build/lib/
-              cd build/ && powershell Compress-Archive * clipster_win.zip
+              cd build && zip -r9 clipster_win *
             OUT_FILE_NAME: clipster_win.zip
             ASSET_MIME: application/zip
     steps:
@@ -108,6 +108,7 @@ jobs:
           mingw-w64-x86_64-gcc
           glib2-devel
           base-devel
+          zip
       if: runner.os == 'Windows'
     - name: Build Go for ${{ matrix.TARGET }}
       run: ${{ matrix.CMD_BUILD }}
