--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -70,12 +70,21 @@ jobs:
             TARGET: windows
             SHELL: msys2 {0}
             CMD_BUILD: |
-              sed -i -e 's/-Wl,-luuid/-luuid/g' /mingw64/lib/pkgconfig/gdk-3.0.pc  # fix bug
+              mkdir -p build/clipster build/bin/ build/lib/
+              mkdir -p build/share/glib-2.0/ build/share/icons/Adwaita/
+              sed -i -e 's/-Wl,-luuid/-luuid/g' /mingw64/lib/pkgconfig/gdk-3.0.pc
               go mod tidy -compat="1.17"
-              go build -o build/clipster_win.exe -ldflags "-extldflags=-static -H=windowsgui -s -w" .
-              cd build && powershell Compress-Archive clipster_win.exe clipster_win.zip
+              go build -o build/bin/clipster_win.exe -ldflags "-H=windowsgui -s -w" .
+              mv /mingw64/bin/*.dll build/bin/
+              mv /mingw64/share/icons/hicolor/ build/share/icons/
+              cp /mingw64/share/icons/Adwaita/* build/share/icons/Adwaita/ || :
+              mv /mingw64/share/icons/Adwaita/16x16/ build/share/icons/Adwaita/
+              mv /mingw64/share/glib-2.0/schemas/  build/share/glib-2.0/
+              mv /mingw64/lib/gdk-pixbuf-2.0/ build/lib/
+              cd build && mv * clipster/ || :
+              zip -r9 clipster_win clipster/
             OUT_FILE_NAME: clipster_win.zip
-            ASSET_MIME: application/zip  # application/vnd.microsoft.portable-executable
+            ASSET_MIME: application/zip
     steps:
     - uses: s-weigand/setup-conda@v1
       with:
@@ -98,10 +107,12 @@ jobs:
         msystem: MINGW64
         path-type: inherit
         install: >-
+          mingw-w64-x86_64-pkg-config
           mingw-w64-x86_64-gtk3
-          mingw-w64-x86_64-toolchain
-          base-devel
+          mingw-w64-x86_64-gcc
           glib2-devel
+          base-devel
+          zip
       if: runner.os == 'Windows'
     - name: Build Go for ${{ matrix.TARGET }}
       run: ${{ matrix.CMD_BUILD }}
